force-app/main/default/objects/clofor_com_cfs__LoanPayPayReq__c/fields/clofor_com_cfs__LoanPaymentID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanPaymentID__c</fullName>
    <label>LOAN REPAYMENT ID</label>
    <referenceTo>clofor_com_cfs__LoanRepayment__c</referenceTo>
    <relationshipName>LoanPayPayReq</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>