force-app/main/default/objects/clofor_com_cfs__LoanPayPayReq__c/fields/clofor_com_cfs__PaymentRequestRollUpStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentRequestRollUpStatus__c</fullName>
    <label>PAYMENT REQUEST ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>